update: hide logs button, zenmux integration, i18n support, readme update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoDeck AI</title>
+    <meta name="description" content="更好用的自动化PPT生成器，支持上传文档与链接，提供风格、要求分析生成大纲与高清幻灯片。">
+    <meta name="keywords" content="更好用的自动化PPT, 演示文稿生成, 幻灯片设计, 自动化生成,  高质量图片生成">
+    <meta name="robots" content="index,follow">
+    <meta name="author" content="AutoDeck AI">
+    <meta name="theme-color" content="#6366f1">
+    <meta property="og:title" content="AI PPT 生成器 | AutoDeck AI">
+    <meta property="og:description" content="上传文档或链接，自动生成结构化大纲与高清幻灯片，支持中文与英文。">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="AutoDeck AI">
+    <meta property="og:locale" content="zh_CN">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="AI PPT 生成器 | AutoDeck AI">
+    <meta name="twitter:description" content="上传文档或链接，自动生成结构化大纲与高清幻灯片。">
+    <link rel="alternate" href="/" hreflang="zh-CN">
+    <link rel="alternate" href="/" hreflang="en">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "AutoDeck AI",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web",
+        "description": "AI PPT 生成器，支持上传文档与链接，自动化分析生成大纲与高清幻灯片。",
+        "inLanguage": "zh-CN",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "Nil"
+        }
+      }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script>
@@ -20,6 +51,7 @@
       ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
       ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
+  <!-- 
   <script type="importmap">
 {
   "imports": {
@@ -33,7 +65,9 @@
     "jszip": "https://aistudiocdn.com/jszip@^3.10.1"
   }
 }
-</script>
+</script> 
+-->
+  <script type="module" src="/index.tsx"></script>
 </head>
   <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
