Fix: Replace Tailwind CDN with local build & use local pdfjs-dist

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="AI PPT 生成器 | AutoDeck AI">
     <meta name="twitter:description" content="上传文档或链接，自动生成结构化大纲与高清幻灯片。">
-    <link rel="alternate" href="/" hreflang="zh-CN">
-    <link rel="alternate" href="/" hreflang="en">
+    <link rel="alternate" href="https://www.ai-biao.com/AIPPT/" hreflang="zh-CN">
+    <link rel="alternate" href="https://www.ai-biao.com/AIPPT/" hreflang="en">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -35,12 +35,6 @@
           "priceCurrency": "Nil"
         }
       }
-    </script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-    <script>
-      var pdfjsLib = window['pdfjs-dist/build/pdf'];
-      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
